refactoring and updating cdn

--- a/Javascript/Demo1/index.html
+++ b/Javascript/Demo1/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
-<!--sean edwards
-	8/20/15
-    Month
--->
 <html>
 <head>
 <title>Weather API App</title>
   <link href='http://fonts.googleapis.com/css?family=Yesteryear' rel='stylesheet' type='text/css'>
-<link href="style.css" rel="stylesheet" type="text/css">
+<link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 <div id="container">
-  <header> 
+  <header>
       <h1>Sean's weather service</h1>
   </header>
-  
-  
+
+
     <h2>Current Conditions</h2>
     <div class = "current">
     <img id="icon">
-            <p id="weather"></p>
+    <p id="weather"></p>
       <p id="feelsLike"></p>
       <p id="temp_f"></p>
       <p id="relative_humidity"></p>
@@ -29,15 +25,15 @@
       <p id="test"></p>
 </div>
 
-  
-  
+
+
     <h2>Your Hourly 1-day forecast</h2>
 <div class="current">
     <p id="lol"></p>
       <p id="lol2"></p>
       <p id="lol3"></p>
       </div>
-  
+
 
     <h2>Your 7-day forecast</h2>
     <div class="current">
@@ -47,20 +43,19 @@
       <p id="dh"></p>
       <p id="dl"></p>
       <p id=""></p>
-      <!--	1. Display the 7-day forecast 
+      <!--	1. Display the 7-day forecast
       		2. Display the icon
       		3. Display weather
             4. Display highs
             5. Display lows
             6. Display conditions
       -->
-
 </div>
   <footer>
 <p>api by <a href="http://www.wunderground.com/" target="_blank">weather underground</a></p>
   </footer>
 </div><!--Closes Container-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
