removed uneccsary files

--- a/Javascript/Demo2/index.html
+++ b/Javascript/Demo2/index.html
@@ -4,25 +4,25 @@
 <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Untitled Document</title>
+<title>API</title>
 <link href="css/mystyle.css" rel="stylesheet">
 </head>
 <body>
 
-<h1>Sean's first api</h1>
-  <div id="list">
+<h1>Google map api</h1>
+
+<div id="list">
   <ol>
-<li>hometown marker animation</li>
-<li>traffic layer</li>
-<li>disable the default ui</li>
+    <li>hometown marker animation</li>
+    <li>traffic layer</li>
+    <li>disable the default ui</li>
   </ol>
 </div>
 
 <br>
 <br>
-    <div id="map"></div>
+<div id="map"></div>
 <script type="text/javascript">
-
 
 var map;
 function initMap() {
@@ -30,18 +30,16 @@ function initMap() {
     center: {lat: 43.731476, lng: -79.762545},
     zoom: 8,
         disableDefaultUI: true
-
   });
 
 var trafficLayer = new google.maps.TrafficLayer();
   trafficLayer.setMap(map);
 
-
-marker = new google.maps.Marker({ //set marker 
+marker = new google.maps.Marker({ //set marker
     map: map,
     draggable: true,
     animation: google.maps.Animation.DROP, //style of animation
-    position: {lat: 43.731476, lng: -79.762545} 
+    position: {lat: 43.731476, lng: -79.762545}
   });
   marker.addListener('click', toggleBounce); //adds bounce on click
 }
@@ -60,10 +58,6 @@ function toggleBounce() { //bounce toggle
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGB1SqedXS4hYMeBI2gXY1gCn8WjLlqjw
 &callback=initMap">
     </script>
-
-
-
-
 
 </body>
 </html>
