refactored and cleaned up broken links for best practises

--- a/FrontEnd/Component3/index.html
+++ b/FrontEnd/Component3/index.html
@@ -5,14 +5,11 @@
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,800,600' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
-	<link rel="stylesheet" type="text/css" href="component.css" />
+	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-
-	
 </head>
 <body>
-
-		<!-- Component -->
+<!-- Component -->
 <header>
 </header>
 	<section>
@@ -26,7 +23,6 @@
 			<li><a href="">About us</a></li>
 			<li><a href="">contact us</a></li>
 		</ul>
-
 		<h1>Dream Big.</h1>
 			<h3>"If my mind can conceive it and my heart can <br>believe it, then i can achieve it"</h3>
 			<p>-muhammad ali</p>
@@ -36,8 +32,6 @@
 	<footer>
 		<p>hekoekoea</p>
 	</footer>
-
 	<!-- End Component -->
-	
 </body>
 </html>
