--- a/FrontEnd/Component2/index.html
+++ b/FrontEnd/Component2/index.html
@@ -2,16 +2,11 @@
 <html>
 <head>
 	<title>footer</title>
-
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
-	<link rel="stylesheet" type="text/css" href="component.css" />
-
-	
+	<link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
-
-	<!-- Component -->
-
+<!-- Component -->
 <footer>
 <section>
 	<a href="#top"><img src="images/arrow.png" id="up"></a>
@@ -21,27 +16,23 @@
 		<a href=""><img src="images/im.png"></a>
 		<a href=""><img src="images/tr.png"></a>
 </div>
-
 	<ul id="flist">
 		<li><a href="">Home</a></li>
 		<li><a href="">Menu</a></li>
 		<li><a href="">Story</a></li>
 		<li><a href="">Detox</a></li>
 		<li><a href="">Locations</a></li>
-	</ul>	
-
+	</ul>
 <ul id="slist">
 	<li><a href="">Contact</a></li>
 	<li class="border"><a href="">Blog</a></li>
 	<li class="border"><a href="">Catering</a></li>
 	<li class="border"><a href="">Delivery</a></li>
 </ul>
-
 </section>
 <h2>Health Fast-casual food, crafted with &hearts; in minneapolis</h2>
 <p>Agra culture kitchen & press all rights reserved</p>
 </footer>
 	<!-- End Component -->
-	
 </body>
 </html>
