--- a/FrontEnd/Component2/index.html
+++ b/FrontEnd/Component2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>footer</title>
-	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
+	<link rel="stylesheet" type="text/css" href="css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
