began cleaning up php demo4

--- a/Php/Demo4/index.html
+++ b/Php/Demo4/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>sean 4-2</title>
+  <title></title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
-  <!-- sean edwards -->
-
   <h2> sign-up for a Membership </h2>
     <form action="signup.php" enctype="multipart/form-data" method="post" id="first"/>
     <h3>registration form</h3>
