--- a/Angular/Demo2/index.html
+++ b/Angular/Demo2/index.html
@@ -2,26 +2,30 @@
 <html>
 <head>
     <title></title>
-       <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js">   </script>
-    
-           <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular-route.min.js">   </script>
-    
-    <script  type="text/javascript" src="js/app.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/mystyle.css">
-    </head>
-    <body ng-app="myApp">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js">
+    </script>
 
-        <div id="wrapper">
-            <nav>
-        <a href="#/main">Home</a>
-        <a href="#/form">Favorite A song</a>
-        <a href="#/list">Favorite's list</a>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular-route.min.js">
+    </script>
+
+    <script type="text/javascript" src="js/app.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/mystyle.css">
+</head>
+
+<body ng-app="myApp">
+
+    <div id="wrapper">
+        <nav>
+            <a href="#/main">Home</a>
+            <a href="#/form">Favorite A song</a>
+            <a href="#/list">Favorite's list</a>
         </nav>
         <h1>Favorite songs</h1>
 
         <div ng-view>
         </div>
-        </div>
+    </div>
 
-    </body>
+</body>
+
 </html>
