cleaning up js files

--- a/Javascript/Demo1/index.html
+++ b/Javascript/Demo1/index.html
@@ -1,61 +1,56 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Weather API App</title>
-  <link href='http://fonts.googleapis.com/css?family=Yesteryear' rel='stylesheet' type='text/css'>
-<link href="css/style.css" rel="stylesheet" type="text/css">
+    <title>Weather API App</title>
+    <link href='http://fonts.googleapis.com/css?family=Yesteryear' rel='stylesheet' type='text/css'>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<div id="container">
-  <header>
-      <h1>Sean's weather service</h1>
-  </header>
-
-
-    <h2>Current Conditions</h2>
-    <div class = "current">
-    <img id="icon">
-    <p id="weather"></p>
-      <p id="feelsLike"></p>
-      <p id="temp_f"></p>
-      <p id="relative_humidity"></p>
-      <p id="wind_dir"></p>
-      <p id="wind_mph"></p>
-      <p id="test"></p>
-</div>
-
-
-
-    <h2>Your Hourly 1-day forecast</h2>
-<div class="current">
-    <p id="lol"></p>
-      <p id="lol2"></p>
-      <p id="lol3"></p>
-      </div>
-
-
-    <h2>Your 7-day forecast</h2>
-    <div class="current">
-    <img id="icon2">
-    <p id="dw"></p>
-    <p id="dc"></p>
-      <p id="dh"></p>
-      <p id="dl"></p>
-      <p id=""></p>
-      <!--	1. Display the 7-day forecast
-      		2. Display the icon
-      		3. Display weather
-            4. Display highs
-            5. Display lows
-            6. Display conditions
-      -->
-</div>
-  <footer>
-<p>api by <a href="http://www.wunderground.com/" target="_blank">weather underground</a></p>
-  </footer>
-</div><!--Closes Container-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+    <div id="container">
+        <header>
+            <h1>Sean's weather service</h1>
+        </header>
+        <h2>Current Conditions</h2>
+        <div class="current">
+            <img id="icon">
+            <p id="weather"></p>
+            <p id="feelsLike"></p>
+            <p id="temp_f"></p>
+            <p id="relative_humidity"></p>
+            <p id="wind_dir"></p>
+            <p id="wind_mph"></p>
+            <p id="test"></p>
+        </div>
+        <h2>Your Hourly 1-day forecast</h2>
+        <div class="current">
+            <p id="lol"></p>
+            <p id="lol2"></p>
+            <p id="lol3"></p>
+        </div>
+        <!--	1. Display the 7-day forecast
+      2. Display the icon
+      3. Display weather
+        4. Display highs
+        5. Display lows
+        6. Display conditions -->
+        <h2>Your 7-day forecast</h2>
+        <div class="current">
+            <img id="icon2">
+            <p id="dw"></p>
+            <p id="dc"></p>
+            <p id="dh"></p>
+            <p id="dl"></p>
+            <p id=""></p>
+        </div>
+        <footer>
+            <p>api by <a href="http://www.wunderground.com/" target="_blank">weather underground</a></p>
+        </footer>
+    </div>
+    <!--Closes Container-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
+
 </html>
