--- a/Javascript/Demo2/index.html
+++ b/Javascript/Demo2/index.html
@@ -1,23 +1,25 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Google map api</title>
-<link href="css/mystyle.css" rel="stylesheet">
+    <title>Google map api</title>
+    <link href="css/mystyle.css" rel="stylesheet">
 </head>
+
 <body>
 
-<h1>Google map api</h1>
+    <h1>Google map api</h1>
 
-<br>
-<br>
-<div id="map"></div>
-  <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGB1SqedXS4hYMeBI2gXY1gCn8WjLlqjw
+    <br>
+    <br>
+    <div id="map"></div>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGB1SqedXS4hYMeBI2gXY1gCn8WjLlqjw
 &callback=initMap">
-    </script>
-    <script src="js/map.js"></script>
+        </script>
+        <script src="js/map.js"></script>
 </body>
+
 </html>
