--- a/Javascript/Demo3/index.html
+++ b/Javascript/Demo3/index.html
@@ -1,61 +1,59 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Untitled Document</title>
-<link rel="stylesheet" type="text/css" href="css/mystyle.css">
-<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <title>Untitled Document</title>
+    <link rel="stylesheet" type="text/css" href="css/mystyle.css">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 </head>
+
 <body>
-<div id="container">
+    <div id="container">
+        <div id="wrapper">
+            <button id="add-todo">add to do list</button>
+            <!--to do list-->
+            <div id="to-do">
+                <h1>My to do list</h1>
+                <ul id='todo-list' class="sortlist">
+                    <li class="ui-state-default"><label><input type="checkbox" ></label></li>
+                </ul>
+            </div>
+            <hr>
+            <!--completed list-->
+            <div id="completed">
+                <h2>completed tasks</h2>
+                <ul id='completed-list' class="sortlist">
+                    <li class="ui-state-default"><label><input type="checkbox" ></label></li>
+                </ul>
+            </div>
 
-<div id="wrapper">
-	<button id="add-todo">add to do list</button>
+            <div id="jk">
+                <button id="edit">Edit</button>
+                <button id="dele">Delete</button>
+            </div>
 
-<!--to do list-->
-<div id="to-do">
-	<h1>My to do list</h1>
-<ul id ='todo-list' class="sortlist">
-	<li class="ui-state-default"><label><input type="checkbox" ></label></li>
-</ul>
-</div>
-
-<hr>
-
-<!--completed list-->
-<div id="completed">
-	<h2>completed tasks</h2>
-<ul id ='completed-list' class="sortlist">
-	<li class="ui-state-default" ><label><input type="checkbox" ></label></li>
-</ul>
-</div>
-
-<div id="jk">
-<button id="edit">Edit</button>
-<button id="dele">Delete</button>
-</div>
-
-</div>
-
-<!--Modal-->
-
-<div id="new-todo" title="add to-do item">
-	<form>
-		<p>
-			<label for="task">Task Name:</label>
-			<input type="text" name="task" id="task">
-		</p>
-		<p>
-			<label for="due-date">Due date:</label>
-			<input type="text" name="due-date" id="due-date">
-		</p>
-	</form>
-</div>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-<script type="text/javascript" src="js/main.js"> </script>
+        </div>
+        <!--Modal-->
+        <div id="new-todo" title="add to-do item">
+            <form>
+                <p>
+                    <label for="task">Task Name:</label>
+                    <input type="text" name="task" id="task">
+                </p>
+                <p>
+                    <label for="due-date">Due date:</label>
+                    <input type="text" name="due-date" id="due-date">
+                </p>
+            </form>
+        </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="js/main.js">
+    </script>
 </body>
+
 </html>
