--- a/Angular/Demo1/index.html
+++ b/Angular/Demo1/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js">
-    </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angularFire/2.3.0/angularfire.js"></script>
     <script type='text/javascript' src="js/app.js"></script>
     <title>Employee directory</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
