--- a/Angular/Demo1/index.html
+++ b/Angular/Demo1/index.html
@@ -6,6 +6,7 @@
   <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angularFire/2.3.0/angularfire.js"></script>
     <script type='text/javascript' src="js/app.js"></script>
+    <script type='text/javascript' src="js/db.js"></script>
     <title>Employee directory</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
