delete is working

--- a/Angular/Demo1/index.html
+++ b/Angular/Demo1/index.html
@@ -56,7 +56,7 @@
                 <td> {{item.street}}</td>
                 <td> {{item.City}}</td>
                 <td> {{item.State}}</td>
-                <td><button ng-click="removeEmployee($index)">Remove Employee</button></td>
+                <td><button ng-click="employees.$remove(item)">Remove Employee</button></td>
             </tr>
         </table>
     </div>
