--- a/Angular/Demo2/index.html
+++ b/Angular/Demo2/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <title></title>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js">
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular-route.min.js">
     </script>
