renamed angular folder for symantics

--- a/Angular/EmployeeDirect/index.html
+++ b/Angular/EmployeeDirect/index.html
@@ -33,10 +33,10 @@
             <input type="text" ng-model="employee.city" />
 
             <label>State:</label>
-            <input type="text" ng-model="employee.state" />
+            <input type="text" ng-model="employee.state" id="last" />
 
             <label></label>
-            <button type="submit" ng-disabled="myForm.$invalid"> Add Employee </button>
+            <button type="submit" ng-disabled="myForm.$invalid" id="aNew"> Add Employee </button>
         </form>
 
         <table>
